# tasmota-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  prek.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs  main.rs  render.rs  schema.rs  target.rs
cli/tests/: cli.rs  conformance.rs
core/: Cargo.toml  README.md
core/src/: cache.rs  discovery.rs  error.rs  guardrail.rs  lib.rs  model.rs  ops.rs  parse.rs  switchkit_impl.rs  transport.rs
core/tests/: switchkit_conformance.rs
