[workspace]
resolver = "3"
members = ["core", "cli"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
authors = ["Ruben J. Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/tasmota-cli"
homepage = "https://github.com/rvben/tasmota-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
