[package]
name = "tasmota-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unofficial command-line tool for managing Tasmota smart devices over HTTP: control, energy, config, firmware, and fleet discovery."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tasmota", "smart-home", "iot", "cli", "home-automation"]
categories = ["command-line-utilities"]
readme = "../README.md"
default-run = "tasmota"

[lib]
name = "tasmota_cli"
path = "src/lib.rs"

[[bin]]
name = "tasmota"
path = "src/main.rs"

[dependencies]
tasmota-core = { path = "../core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"

[dev-dependencies]
jsonschema = { version = "0.46", default-features = false }
httpmock = "0.7"
