[package]
name = "tasmota-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for the tasmota CLI: HTTP transport, Status parsing, discovery, and device model for Tasmota-firmware smart devices."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tasmota", "smart-home", "iot", "home-automation"]
categories = ["api-bindings"]
readme = "README.md"

[lib]
name = "tasmota_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
switchkit = "0.2"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
